apps/hls_examples/bilateral_grid_hls/log
g++ -std=c++0x -I ../../../include/ -I ../../../tools/ -I ../../../apps/support/ -O1 -DNDEBUG -I ../hls_support -I ../hls_support/xilinx_hls_lib_2015_4 -DC_TEST -Wno-unknown-pragmas -Wno-unused-label -Wno-uninitialized -Wno-literal-suffix -g -Wall -Werror run.cpp pipeline_hls.cpp hls_target.cpp pipeline_native.o  -o run -lpng12 -ljpeg -I/usr/include/libpng12 -I/usr/include/libpng12/..  -ldl -lpthread -lz
In file included from run.cpp:6:0:
../hls_support/BufferMinimal.h:86:12: error: ISO C++ forbids declaration of ‘Buffer’ with no type [-fpermissive]
     Buffer() {
            ^
../hls_support/BufferMinimal.h: In member function ‘int Halide::Runtime::HLS::BufferMinimal<T, D>::Buffer()’:
../hls_support/BufferMinimal.h:87:48: error: there are no arguments to ‘memset’ that depend on a template parameter, so a declaration of ‘memset’ must be available [-fpermissive]
         memset(&buf, 0, sizeof(halide_buffer_t));
                                                ^
../hls_support/BufferMinimal.h:87:48: note: (if you use ‘-fpermissive’, G++ will accept your code, but allowing the use of an undeclared name is deprecated)
../hls_support/BufferMinimal.h:90:5: error: no return statement in function returning non-void [-Werror=return-type]
     }
     ^
In file included from run.cpp:7:0:
../../../tools/halide_image_io.h: In instantiation of ‘Halide::Tools::load_image::operator ImageType() [with ImageType = Halide::Runtime::HLS::BufferMinimal<unsigned char>]’:
run.cpp:18:54:   required from here
../../../tools/halide_image_io.h:768:19: error: no matching function for call to ‘Halide::Runtime::HLS::BufferMinimal<unsigned char>::BufferMinimal()’
         ImageType im;
                   ^
In file included from run.cpp:6:0:
../hls_support/BufferMinimal.h:94:5: note: candidate: Halide::Runtime::HLS::BufferMinimal<T, D>::BufferMinimal(int, int, int) [with T = unsigned char; int D = 3]
     BufferMinimal(int first, int second = 0, int third = 0) {
     ^
../hls_support/BufferMinimal.h:94:5: note:   candidate expects 3 arguments, 0 provided
../hls_support/BufferMinimal.h:17:7: note: candidate: constexpr Halide::Runtime::HLS::BufferMinimal<unsigned char>::BufferMinimal(const Halide::Runtime::HLS::BufferMinimal<unsigned char>&)
 class BufferMinimal {
       ^
../hls_support/BufferMinimal.h:17:7: note:   candidate expects 1 argument, 0 provided
In file included from run.cpp:7:0:
../../../tools/halide_image_io.h: In instantiation of ‘bool Halide::Tools::save_png(ImageType&, const string&) [with ImageType = Halide::Runtime::HLS::BufferMinimal<unsigned char>; bool (* check)(bool, const char*, ...) = Halide::Tools::Internal::CheckFail; std::__cxx11::string = std::__cxx11::basic_string<char>]’:
../../../tools/halide_image_io.h:744:42:   required from ‘bool Halide::Tools::save(ImageType&, const string&) [with ImageType = Halide::Runtime::HLS::BufferMinimal<unsigned char>; bool (* check)(bool, const char*, ...) = Halide::Tools::Internal::CheckFail; std::__cxx11::string = std::__cxx11::basic_string<char>]’
../../../tools/halide_image_io.h:783:48:   required from ‘void Halide::Tools::save_image(ImageType&, const string&) [with ImageType = Halide::Runtime::HLS::BufferMinimal<unsigned char>; std::__cxx11::string = std::__cxx11::basic_string<char>]’
run.cpp:23:37:   required from here
../../../tools/halide_image_io.h:251:5: error: ‘class Halide::Runtime::HLS::BufferMinimal<unsigned char>’ has no member named ‘copy_to_host’
     im.copy_to_host();
     ^
../../../tools/halide_image_io.h:297:83: error: ‘class Halide::Runtime::HLS::BufferMinimal<unsigned char>’ has no member named ‘data’
     typename ImageType::ElemType *srcPtr = (typename ImageType::ElemType*)im.data();
                                                                                   ^
In file included from run.cpp:7:0:
../../../tools/halide_image_io.h: In instantiation of ‘bool Halide::Tools::save_jpg(ImageType&, const string&) [with ImageType = Halide::Runtime::HLS::BufferMinimal<unsigned char>; bool (* check)(bool, const char*, ...) = Halide::Tools::Internal::CheckFail; std::__cxx11::string = std::__cxx11::basic_string<char>]’:
../../../tools/halide_image_io.h:747:42:   required from ‘bool Halide::Tools::save(ImageType&, const string&) [with ImageType = Halide::Runtime::HLS::BufferMinimal<unsigned char>; bool (* check)(bool, const char*, ...) = Halide::Tools::Internal::CheckFail; std::__cxx11::string = std::__cxx11::basic_string<char>]’
../../../tools/halide_image_io.h:783:48:   required from ‘void Halide::Tools::save_image(ImageType&, const string&) [with ImageType = Halide::Runtime::HLS::BufferMinimal<unsigned char>; std::__cxx11::string = std::__cxx11::basic_string<char>]’
run.cpp:23:37:   required from here
../../../tools/halide_image_io.h:599:5: error: ‘class Halide::Runtime::HLS::BufferMinimal<unsigned char>’ has no member named ‘copy_to_host’
     im.copy_to_host();
     ^
../../../tools/halide_image_io.h: In instantiation of ‘bool Halide::Tools::save_pgm(ImageType&, const string&, unsigned int) [with ImageType = Halide::Runtime::HLS::BufferMinimal<unsigned char>; bool (* check)(bool, const char*, ...) = Halide::Tools::Internal::CheckFail; std::__cxx11::string = std::__cxx11::basic_string<char>]’:
../../../tools/halide_image_io.h:749:42:   required from ‘bool Halide::Tools::save(ImageType&, const string&) [with ImageType = Halide::Runtime::HLS::BufferMinimal<unsigned char>; bool (* check)(bool, const char*, ...) = Halide::Tools::Internal::CheckFail; std::__cxx11::string = std::__cxx11::basic_string<char>]’
../../../tools/halide_image_io.h:783:48:   required from ‘void Halide::Tools::save_image(ImageType&, const string&) [with ImageType = Halide::Runtime::HLS::BufferMinimal<unsigned char>; std::__cxx11::string = std::__cxx11::basic_string<char>]’
run.cpp:23:37:   required from here
../../../tools/halide_image_io.h:408:5: error: ‘class Halide::Runtime::HLS::BufferMinimal<unsigned char>’ has no member named ‘copy_to_host’
     im.copy_to_host();
     ^
../../../tools/halide_image_io.h: In instantiation of ‘bool Halide::Tools::save_ppm(ImageType&, const string&) [with ImageType = Halide::Runtime::HLS::BufferMinimal<unsigned char>; bool (* check)(bool, const char*, ...) = Halide::Tools::Internal::CheckFail; std::__cxx11::string = std::__cxx11::basic_string<char>]’:
../../../tools/halide_image_io.h:751:42:   required from ‘bool Halide::Tools::save(ImageType&, const string&) [with ImageType = Halide::Runtime::HLS::BufferMinimal<unsigned char>; bool (* check)(bool, const char*, ...) = Halide::Tools::Internal::CheckFail; std::__cxx11::string = std::__cxx11::basic_string<char>]’
../../../tools/halide_image_io.h:783:48:   required from ‘void Halide::Tools::save_image(ImageType&, const string&) [with ImageType = Halide::Runtime::HLS::BufferMinimal<unsigned char>; std::__cxx11::string = std::__cxx11::basic_string<char>]’
run.cpp:23:37:   required from here
../../../tools/halide_image_io.h:523:5: error: ‘class Halide::Runtime::HLS::BufferMinimal<unsigned char>’ has no member named ‘copy_to_host’
     im.copy_to_host();
     ^
cc1plus: all warnings being treated as errors
Makefile:21: recipe for target 'run' failed
make: *** [run] Error 1
